<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/dtl_imgPhoto"
        android:layout_width="170dp"
        android:layout_height="250dp"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/txt_film_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/dtl_imgPhoto"
        android:text="@string/txt_title"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dtl_film_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_film_title"
        android:layout_marginStart="26dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/dtl_imgPhoto"
        android:text="@string/txt_title"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_film_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dtl_film_title"
        android:layout_marginStart="26dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/dtl_imgPhoto"
        android:text="@string/txt_release_date"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dtl_film_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_film_release_date"
        android:layout_marginStart="26dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/dtl_imgPhoto"
        android:text="@string/txt_release_date"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_film_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dtl_film_release_date"
        android:layout_marginStart="26dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/dtl_imgPhoto"
        android:text="@string/txt_duration"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dtl_film_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_film_duration"
        android:layout_marginStart="26dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/dtl_imgPhoto"
        android:text="@string/txt_duration"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_film_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dtl_film_duration"
        android:layout_marginStart="26dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/dtl_imgPhoto"
        android:text="@string/txt_language"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dtl_film_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_film_language"
        android:layout_marginStart="26dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/dtl_imgPhoto"
        android:text="@string/txt_language"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/tengah_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dtl_imgPhoto"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/txt_film_user_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/txt_user_score"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_film_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/txt_rating"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_film_revenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/txt_revenue"
            android:textAlignment="center"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tengah_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tengah_heading"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/dtl_film_user_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/txt_user_score"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/dtl_film_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/txt_rating"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/dtl_film_revenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/txt_revenue"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_film_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tengah_value"
        android:layout_marginTop="15dp"
        android:text="@string/txt_genre"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dtl_film_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_film_genre"
        android:layout_marginTop="5dp"
        android:text="@string/txt_genre"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_film_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dtl_film_genre"
        android:layout_marginTop="15dp"
        android:text="@string/txt_genre"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dtl_film_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_film_overview"
        android:layout_marginTop="5dp"
        android:text="@string/film_overview"
        android:textSize="16sp" />


</RelativeLayout>